# hack_canada_2026

./: .env  .gitignore  README.md  pyproject.toml  test_all.py
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: deterrent.py  incidents.py  main.py  threats.py
backend/ml/: yolo.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css
frontend/src/components/: DetectionLog.jsx  ScareControls.jsx  StatusIndicator.jsx  VideoFeed.jsx
frontend/src/hooks/: useMockEvents.js  useWebSocket.js
ml/: inference.py  wildlife.py  yolo.py
