[project]
name = "hack-canada-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.9.0",
    "pytorchwildlife>=1.2.4.2",
    "roboflow>=1.2.16",
    "setuptools>=60,<70",
    "tensorboard>=2.20.0",
    "torch==2.2.0",
    "ultralytics>=8.4.21",
    "google-genai>=1.0.0",
    "numpy>=1.24,<2",
]
